--- a/src/Weather.css
+++ b/src/Weather.css
@@ -1,3 +1,57 @@
 .Weather {
-    border: 1px solid #dadde1
+    border: 1px solid #dadde1;
+    font-family: arial, sans-serif;
+    color: rgb(135, 135, 135);
+    padding: 16px;
+    border-radius: 4px;
+
+}
+.Weather form {
+    margin-bottom: 20px;
+}
+
+.Weather h1 {
+    font-size: 24px;
+    font-weight: 100;
+    line-height: 29px; 
+    margin: 20px 0 0 0;
+}
+
+.Weather ul {
+   margin: 0;
+   padding: 0; 
+}
+
+.Weather li {
+    font-size: 16px;
+    font-weight: 100;
+    line-height: 19px; 
+    list-style: none;
+}
+
+.Weather img {
+    height: 64px;
+    width: 64px;
+    /* margin-right: 1px; */
+    display: inline-block;
+    position: relative;
+    top: -18px;
+    /* added position and display since clearfix is not float-left on temp and unit displace image above */
+}
+
+.Weather .temperature {
+    font-weight: bold;
+    color: rgb(33, 33, 33);
+    font-size: 64px;
+    line-height: 64px;
+    font-weight: 400;
+    
+}
+.Weather .unit {
+    color: rgb(33, 33, 33);
+    font-size: 16px;
+    font-weight: 400;
+    position: relative;
+    line-height: 1;
+    top: -34px;
 }
