--- a/src/Weather.css
+++ b/src/Weather.css
@@ -1,3 +1,5 @@
+
+
 .Weather {
     border: 1px solid #dadde1;
     font-family: arial, sans-serif;
@@ -35,7 +37,7 @@
     /* margin-right: 1px; */
     display: inline-block;
     position: relative;
-    top: -18px;
+    /* top: -18px; */
     /* added position and display since clearfix is not float-left on temp and unit displace image above */
 }
 
@@ -44,9 +46,12 @@
     color: rgb(33, 33, 33);
     font-size: 64px;
     line-height: 64px;
+    margin-left: 5px;
     font-weight: 400;
+    margin-left: 10px;
+  }
     
-}
+
 .Weather .unit {
     color: rgb(33, 33, 33);
     font-size: 16px;
@@ -54,4 +59,4 @@
     position: relative;
     line-height: 1;
     top: -34px;
-}
+  }
