--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,16 @@
 .App {
     max-width: 600px;
     margin: 30px auto;
-    
 }
 
 .App footer {
     font-size: 11px;
     margin: 10px 0;
     text-align: center;
+    color: #d9dad7;
+    font-weight: bold;
 }
 
+.App a {
+    color: #c24d2c;
+}
