--- a/src/WeatherForecast.css
+++ b/src/WeatherForecast.css
@@ -1,14 +1,23 @@
 .WeatherForecast{
     text-align: center;
+    font-weight: bold;
+    margin-top: 10px;
 }
 
-/* .WeatherForecast-day{}
+.WeatherForecast-temperature{
+    text-align: center;
+}
+.WeatherForecast-temperature-max{
+    margin-left: 5px;
+    font-weight: bold;
+}
 
-.WeatherForecast-temperatures{}
-
-.WeatherForecast-Temperature-max{} */
-
-.WeatherForecast-Temperature-min{
+.WeatherForecast-temperature-min{
     opacity: 0.6;
     margin-left: 5px;
+  
 }
+.WeatherForecast-day {
+    font-weight: bold;
+}
+
